src/test/ui/issues/issue-29516.stderr
error: negative impls are not allowed for tuples
  --> $DIR/issue-29516.rs:6:1
   |
LL | impl<A> !NotSame for (A, A) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

